--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+<h1>Pealkiri</h1>
+
+<div>
+Siin on üks rida
+</div>
+
+<div id="vastus"></div>
+
+<script>
+summa=0;
+kordi=0;
+while(kordi<=100){
+summa=summa+kordi;
+kordi=kordi+1;
+}
+document.getElementById("vastus").innerHTML = summa;
+</script>
