lisatud Pkyte kaust

--- a/Pkyte/index.html
+++ b/Pkyte/index.html
@@ -6,7 +6,7 @@
     <!-- read in javascript libraries for parsing csv: https://github.com/okfn/csv.js  -->
     <script src="jquery.js"></script> 
     <script src="csv.js"></script>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   </head>
   <body>
